fix: map tags in details showing correctly